All of the work towards hiding the secondary ability holder, except for actually re-setting-up the gui when the player gets an item.

--- a/data/objects/gui-components/hud-components/heart_display.cfg
+++ b/data/objects/gui-components/hud-components/heart_display.cfg
@@ -88,13 +88,13 @@
 		update_display
 	)",
 
-	on_start_level: "[
-		update_display
-	]",	
+	on_start_level: "update_display",	
+	on_create: "update_display",
+	on_being_added: "update_display",
 	
-	on_create: "[
-		update_display
-	]",	
+	on_being_removed: "[
+		map(_active_child_hearts, remove_object(value)),
+	]",
 	
 	
 	object_type: [{
