--- a/data/objects/gui-components/hud-components/mana_display.cfg
+++ b/data/objects/gui-components/hud-components/mana_display.cfg
@@ -19,7 +19,7 @@
 	
 		mana_bar_container: {
 			type: "obj mana_display.bar_container",
-			init: "object('mana_display.bar_container', {x: me.x, y: me.y})",
+			init: "object('mana_display.bar_container', x,y,1)",
 		},
 		mana_bar_center: {
 			type: "obj mana_display.bar_center",
@@ -32,24 +32,36 @@
 		mana_bar_bottom: {
 			type: "obj mana_display.bottom_cap",
 			init: "object('mana_display.bottom_cap', x,y,1)",
-		}
+		},
+		
+		constructor: "[
+			add_object(mana_bar_container),
+			add_object(mana_bar_center),
+			add_object(mana_bar_top),
+			add_object(mana_bar_bottom),
+			;
+			set(mana_bar_container.xy, me.xy),
+		]",
+		
 	},
 	
-	on_start_level: "[
-		add_object(mana_bar_container),
-		add_object(mana_bar_center),
-		add_object(mana_bar_top),
-		add_object(mana_bar_bottom),
+	on_start_level: "constructor",
+	on_create: "constructor",
+	on_being_added: "constructor",
+
+	
+	on_being_removed: "[
+		remove_object(mana_bar_container),
+		remove_object(mana_bar_center),
+		remove_object(mana_bar_top),
+		remove_object(mana_bar_bottom),
 	]",
-	on_create: "[
-		add_object(mana_bar_container),
-		add_object(mana_bar_center),
-		add_object(mana_bar_top),
-		add_object(mana_bar_bottom),
-	]",
+
 	
 	on_process: "[
 		[
+			set(mana_bar_container.xy, me.xy),  //it's dumb/wasteful, but the constructor version of this doesn't seem to 'stick' when it's removed/applied multiple times per execution frame.
+
 			set(mana_bar_top.x, x_offset), set(mana_bar_top.y, y_offset),
 			set(mana_bar_bottom.x, x_offset ), set(mana_bar_bottom.y, y_offset+ mana_bar_length+4),
 			if(mana_bar_length > 5, 
