--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -1255,7 +1255,7 @@ properties: {
 	},
 	gui_mana_display: {
 		type: "obj mana_display", 
-		init: "object('mana_display', 27+26, 27 + 96 + if(should_display_secondary_abilities, 98, 0), {})",
+		init: "object('mana_display', 27+26, 27 + 96 + if(should_display_secondary_abilities, 98, 0), {})", //<- this won't work anytime after the initial frame.
 		persistent: false,
 	},
 	gui_boss_progress_display: {
@@ -1289,40 +1289,49 @@ properties: {
 	
 	set_up_gui: "def() -> commands [
 		tear_down_gui(), //The set-up event is fired twice in some cases. In that case; simply resetup the gui.
-		
+		;
 		map(components.default + if(TOUCH_SCREEN, components[control_scheme], []),
 			'gui_element', [
 				remove_object(gui_element), //We don't want duplicate gui objects. Since it's very hard to only fire setup once, we'll just remove any objects that find their way into the level twice. Note - this won't work if the event is called twice in the same event handler, but it will work fine if called in different event handlers.
 				add_object(gui_element),
 			]
 		) where components = {
-			default: [
-				gui_gold_display,
-				gui_heart_display,
-				gui_ability_display,
-				gui_mana_display,
-				gui_boss_progress_display,
-				gui_death_indicator_display
-			]
-			+
-			if(should_display_secondary_abilities, [gui_secondary_ability_display], [])
-			+
-			if(not not find(level.active_chars, value.type in ['level_controller_neverending', 'level_controller_neverending_vertical']), //Test if we're on a score-based arcade level.
+			default:
+				default_hud_components
+				+
+				if(should_display_secondary_abilities, [gui_secondary_ability_display], [])
+				+
+				if(not not find(level.active_chars, value.type in ['level_controller_neverending', 'level_controller_neverending_vertical']), //Test if we're on a score-based arcade level.
 					[gui_score_display, gui_highest_score_display], //Arcade displays score/best score,
 					[/*gui_coins_display*/]), //but normal play used to replace this with the old coin indicator, which took up the same real estate on the screen.  We kept the coin indicator on the coin arcade level.
 			ipad_2d: [/*mobile controls here*/],
 			iphone_2d: [],
 		},
+		;
+		set(gui_mana_display.mid_xy, [
+			27 + 26,
+			27 + 96 + if(should_display_secondary_abilities, 98, 0)
+		]),
 	]",
 	
 	should_display_secondary_abilities: "bool :: size(secondary_item_list) > 0",
 
+	default_hud_components: "[
+		gui_gold_display,
+		gui_heart_display,
+		gui_ability_display,
+		gui_mana_display,
+		gui_boss_progress_display,
+		gui_death_indicator_display
+	]",
 
 		
 	tear_down_gui: "def() -> commands
-		[gui_boss_progress_display.reset_boss_list,
-		map([gui_heart_display, gui_ability_display, gui_secondary_ability_display, gui_mana_display, gui_coins_display, gui_boss_progress_display], 
-			remove_object(value))
+		[
+			gui_boss_progress_display.reset_boss_list,
+			map(default_hud_components,
+				remove_object(value)
+			)
 		]
 	", 
 
