Set up the actual code to rebuild the HUD if you acquire an item.

--- a/data/object_prototypes/base/player_controlled.cfg
+++ b/data/object_prototypes/base/player_controlled.cfg
@@ -403,28 +403,28 @@ properties: {
 	null_item: "class inventory_item :: find_or_die(item_list_complete, value.id = enum item_null)",
 
 	nth_item_away_from_current_item_of_category: "def(int offset, ItemCategory category) -> InventoryItemType
-														if(size(the_item_list) > 0 and the_current_item in the_item_list,
-																					the_item_list[final_index],
-																					enum item_null
-																				)
+		if(size(the_item_list) > 0 and the_current_item in the_item_list,
+									the_item_list[final_index],
+									enum item_null
+								)
 
-															where final_index = if(size(the_item_list) > 0,
-																					mod(index(the_item_list, the_current_item) + offset, size(the_item_list)),
-																					0
-																				)
+			where final_index = if(size(the_item_list) > 0,
+									mod(index(the_item_list, the_current_item) + offset, size(the_item_list)),
+									0
+								)
 
-															where the_item_list = switch(category,
-																								enum super_ability, 		super_ability_list,
-																								enum secondary_item,		secondary_item_list,
-																								enum underwater_ability,	underwater_ability_list,
-																															ability_list
-																							)
-															where the_current_item = switch(category,
-																								enum super_ability, 		current_super_ability,
-																								enum secondary_item,		current_secondary_item,
-																								enum underwater_ability,	current_underwater_ability,
-																															current_ability
-																							)",
+			where the_item_list = switch(category,
+												enum super_ability, 		super_ability_list,
+												enum secondary_item,		secondary_item_list,
+												enum underwater_ability,	underwater_ability_list,
+																			ability_list
+											)
+			where the_current_item = switch(category,
+												enum super_ability, 		current_super_ability,
+												enum secondary_item,		current_secondary_item,
+												enum underwater_ability,	current_underwater_ability,
+																			current_ability
+											)",
 
 
 
@@ -451,7 +451,9 @@ properties: {
 
 
 
-
+		#####-- HUD virtual functions --#####
+	set_up_gui: "commands :: null",
+	tear_down_gui: "commands :: null",
 
 		#####-- item quantity management --#####
 	add_item: "def(InventoryItemType item_name, int new_count) -> commands
@@ -472,8 +474,11 @@ properties: {
 			On rare occasions (generally due to papering-over builtins) we may need to invoke custom code when an item amount gets changed, rather than merely altering the amount.  This is a place where we can do that.
 		*/
 	custom_post_item_amount_modification_commands: "commands :: [
-																	combine_partial_heart_containers ;
+																	combine_partial_heart_containers
+																	;
 																	adjust_hitpoints_per_heart_containers
+																	;
+																	set_up_gui
 																]",
 
 
