--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -23,7 +23,8 @@ load_variations: "fat",
 properties: {						
 #-------------------------- constructor/destructor logic --------------------------#
 	common_frogatto_specific_constructor_commands: "	[
-		set_up_gui() ;
+		set_up_gui
+		;
 		gui_boss_progress_display.reset(),
 
 		/* some mostly cosmetic/gameplay-related stuff */
@@ -92,7 +93,7 @@ properties: {
 
 	
 	specific_player_obj_destructor: "commands ::	[
-														tear_down_gui(), /* Remove the gui so it does not panic when we, ourself, are removed. */
+														tear_down_gui, /* Remove the gui so it does not panic when we, ourself, are removed. */
 														zombie_object_cleanup,
 													]",
 	
@@ -1287,8 +1288,8 @@ properties: {
 	},
 		// } deprecated components
 	
-	set_up_gui: "def() -> commands [
-		tear_down_gui(), //The set-up event is fired twice in some cases. In that case; simply resetup the gui.
+	set_up_gui: "commands :: [
+		tear_down_gui, //The set-up event is fired twice in some cases. In that case; simply resetup the gui.
 		;
 		map(components.default + if(TOUCH_SCREEN, components[control_scheme], []),
 			'gui_element', [
@@ -1326,7 +1327,7 @@ properties: {
 	]",
 
 		
-	tear_down_gui: "def() -> commands
+	tear_down_gui: "commands ::
 		[
 			gui_boss_progress_display.reset_boss_list,
 			map(default_hud_components,
