Flagged the boss hp bar as not to be auto-scaled.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -1383,7 +1383,13 @@ properties: {
 	]",
 
 
-	hud_types_omitted_from_scaling: "[string] :: ['mana_display.bar_container', 'mana_display.bar_center', 'mana_display.bar_center', 'mana_display.bar_center']",
+	hud_types_omitted_from_scaling: "[string] :: [
+		'mana_display.bar_container',
+		'mana_display.bar_center',
+		'mana_display.bar_center',
+		'mana_display.bar_center',
+		'gui_boss_progress_display',
+	]",
 
 #-------------------------- death-tracking --------------------------#
 
