--- a/data/objects/gui-components/hud-components/boss_progress_display.cfg
+++ b/data/objects/gui-components/hud-components/boss_progress_display.cfg
@@ -3,7 +3,7 @@
 	id: "boss_progress_display",
 	is_strict: true,
 	use_absolute_screen_coordinates: true,
-	hidden_in_game: true,
+	hidden_in_game: false,
 	serializable: false,
 	
 	zorder: "@include data/zorder.cfg:in_front_of_everything",
@@ -87,10 +87,72 @@
 		
 		//potential_bosses: "[obj hittable] :: filter(level.chars, value is obj hittable and value.is_a_boss)",
 		boss_list: { type: "[obj hittable]", default: [] },
+
+
+
+
+
+
+
+
+
+		mana_bar_center: {
+			type: "obj boss_progress_display.bar_center",
+			init: "object('boss_progress_display.bar_center', x,y,1)",
+		},
+		mana_bar_left: {
+			type: "obj boss_progress_display.left_cap",
+			init: "object('boss_progress_display.left_cap', x,y,1)",
+		},
+		mana_bar_right: {
+			type: "obj boss_progress_display.right_cap",
+			init: "object('boss_progress_display.right_cap', x,y,1)",
+		},
+
+		constructor: "[
+			add_object(mana_bar_center),
+			add_object(mana_bar_left),
+			add_object(mana_bar_right),
+		]",
+		
+		hitpoint_bar_length: "int :: level.camera_position[2] - 100",
+
+		draw_bar: "[
+			[
+				set(mana_bar_left.x, x_offset), set(mana_bar_left.y, y_offset),
+				set(mana_bar_right.x, x_offset + display_length + mana_bar_left.img_w ), set(mana_bar_right.y, y_offset),
+				if(display_length > 8, 
+					[
+						add_object(mana_bar_center),
+						add_object(mana_bar_left),
+						add_object(mana_bar_right),
+						mana_bar_center.set_draw_params( x_offset + dump(mana_bar_left.img_w), y_offset, display_length)
+					],
+					[
+						remove_object(mana_bar_center),
+						remove_object(mana_bar_left),
+						remove_object(mana_bar_right),
+					]
+				)
+			]
+				where x_offset = me.x+4
+				where y_offset = me.y-2
+			 
+				where display_length = if(max_hp > 0, lib.math.ceil( hitpoint_bar_length * hitpoint_fraction ), 0)
+				where hitpoint_fraction = (currently_displayed_hitpoint_amount / max_hp)
+				where currently_displayed_hitpoint_amount = if(abs(step) < 0.01, hp, last_displayed_value+step)
+				where step = (hp - last_displayed_value) / bar_tween_speed
+				where hp = fold([int]<-map(_bosses, value.hitpoints), a+b)
+		]
+			where max_hp = recent_max_hitpoints
+			where direct_boss_max_hp = fold([int]<-map(_bosses, value.max_hitpoints), a+b)
+			where _bosses = me.boss_list
+		",
 	},
 	
 	on_create: "[
-		set_widgets(heart_icon, health_bar_background, health_bar),
+		//set_widgets(heart_icon, health_bar_background, health_bar),
+		constructor,
 	]",
 	
 	on_player_death: "reset_boss_list",
@@ -101,11 +163,17 @@
 				// cache the hitpoints, because if the boss dies, we can no longer directly access it.
 			if(direct_boss_max_hp > 0, set(recent_max_hitpoints, max(recent_max_hitpoints, direct_boss_max_hp))),
 		
-			map([widget]<-widgets.children, set(value.visible, bool(display_value))),
-			if(display_value, 
-				set(health_bar.segment_length, display_length),
+/* 			map([widget]<-widgets.children, set(value.visible, bool(display_value))),
+ 			if(display_value, 
+ 				set(health_bar.segment_length, display_length),
 				[set(recent_max_hitpoints, 0), set(boss_list,[])]
 			),
+*/
+			if(display_value, 
+				draw_bar,
+				[set(recent_max_hitpoints, 0), set(boss_list,[])]
+			),
+
 		]
 	] 
 		where display_length = if(max_hp > 0, round(health_bar_background.segment_length*display_value/1.0/max_hp), 0)
@@ -116,5 +184,56 @@
 	  where direct_boss_max_hp = fold([int]<-map(_bosses, value.max_hitpoints), a+b)
 	  where _bosses = me.boss_list
 	  ",
-}
 
+
+	object_type: [{
+			"@base": true,
+			serializable: false,
+			zorder: "@include data/zorder.cfg:in_front_of_everything",
+			zsub_order: 2,
+			is_strict: true,
+			use_absolute_screen_coordinates: true,
+		},
+		{
+			id: "bar_center",
+			properties: {
+				_length: { type: "int", default: 10 },
+				set_draw_params: "def(int new_x, int new_y, int new_length) -> commands [
+										set(x, new_x),
+										set(y, new_y),
+										set(_length, new_length)
+									]"
+						
+
+			},
+			on_process: "set(draw_area, [0.0, 0.0, _length/2.0, img_h/2.0])",
+		
+			animation: {
+				id:	'normal',
+				image: 'gui/progress-bar-center.png',
+				rect: [0,0,7,7], 
+				no_remove_alpha_borders: true,
+			},
+		},{
+			id: "left_cap",
+
+			animation: {
+				id:	'normal',
+				image: 'gui/progress-bar-endcaps.png',
+				rect: [0,0,7,7],
+				no_remove_alpha_borders: true,
+			},
+		},{
+			id: "right_cap",
+
+			animation: {
+				id:	'normal',
+				image: 'gui/progress-bar-endcaps.png',
+				rect: [0,8,7,15], 
+				no_remove_alpha_borders: true,
+			},
+		},
+	],
+
+
+}
