--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -1261,7 +1261,7 @@ properties: {
 	},
 	gui_boss_progress_display: {
 		type: "obj boss_progress_display", 
-		init: "object('boss_progress_display', 27+0, 27+level.camera_position[3], {})",
+		init: "object('boss_progress_display', 27+0, level.camera_position[3] - 100, {})",
 		persistent: false,
 	},
 	gui_gold_display: {
