Greatly improved the centering of the light-halo on the bouncing fireball attack.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -3948,6 +3948,7 @@ object_type: [
 				"@base": true,
 				image: "effects/particles2.png",
 				pad: 3,
+				no_remove_alpha_borders: true,
 			},
 			{
 				id: "normal",
@@ -4010,7 +4011,7 @@ object_type: [
 		id: "fire_shot_arc",
 		prototype: ["shot"],
 		zorder: "@include data/zorder.cfg:near_player_foreground_effects",
-		solid_area: [5,5,10,10],
+		solid_area: [4,5,9,10],
 		
 		properties: {
 			team: "'player'",
@@ -4116,6 +4117,7 @@ object_type: [
 				"@base": true,
 				image: "effects/particles2.png",
 				pad: 3,
+				no_remove_alpha_borders: true,
 			},
 			{
 				id: "normal",
