Further tweaks to drawing the boss progress display as an object; added the icon, switched to relative positioning, and positioned it correctly on the screen.

--- a/data/objects/gui-components/hud-components/boss_progress_display.cfg
+++ b/data/objects/gui-components/hud-components/boss_progress_display.cfg
@@ -98,35 +98,49 @@
 
 		mana_bar_center: {
 			type: "obj boss_progress_display.bar_center",
-			init: "object('boss_progress_display.bar_center', x,y,1)",
+			init: "object('boss_progress_display.bar_center', mid_x, mid_y, {parent: me})",
 		},
 		mana_bar_left: {
 			type: "obj boss_progress_display.left_cap",
-			init: "object('boss_progress_display.left_cap', x,y,1)",
+			init: "object('boss_progress_display.left_cap', mid_x, mid_y, {parent: me})",
 		},
 		mana_bar_right: {
 			type: "obj boss_progress_display.right_cap",
-			init: "object('boss_progress_display.right_cap', x,y,1)",
+			init: "object('boss_progress_display.right_cap', mid_x, mid_y, {parent: me})",
 		},
+		angry_heart_icon: {
+			type: "obj boss_progress_display.angry_heart_icon",
+			init: "object('boss_progress_display.angry_heart_icon', mid_x, mid_y, {parent: me})",
+		},
+
 
 		constructor: "[
 			add_object(mana_bar_center),
 			add_object(mana_bar_left),
 			add_object(mana_bar_right),
+			add_object(angry_heart_icon),
+			
+			set(angry_heart_icon.relative_x, generic_padding_value + angry_heart_icon.img_w/2),
 		]",
 		
-		hitpoint_bar_length: "int :: level.camera_position[2] - 100",
+		generic_padding_value: "int :: 16", //used on both sides of the screen, and between the icon and the bar.
+		heart_icon_margin: "int :: angry_heart_icon.img_w + generic_padding_value",
+		hitpoint_bar_length: "int :: level.camera_position[2] - heart_icon_margin - (generic_padding_value * 3)",
 
 		draw_bar: "[
 			[
-				set(mana_bar_left.x, x_offset), set(mana_bar_left.y, y_offset),
-				set(mana_bar_right.x, x_offset + display_length + mana_bar_left.img_w ), set(mana_bar_right.y, y_offset),
+				set(mana_bar_left.relative_x, x_offset),
+				set(mana_bar_left.relative_y, y_offset),
+				
+				set(mana_bar_right.relative_x, x_offset + display_length + mana_bar_left.img_w ),
+				set(mana_bar_right.relative_y, y_offset),
+				
 				if(display_length > 8, 
 					[
 						add_object(mana_bar_center),
 						add_object(mana_bar_left),
 						add_object(mana_bar_right),
-						mana_bar_center.set_draw_params( x_offset + dump(mana_bar_left.img_w), y_offset, display_length)
+						mana_bar_center.set_draw_params( x_offset + mana_bar_left.img_w, y_offset, display_length)
 					],
 					[
 						remove_object(mana_bar_center),
@@ -135,8 +149,8 @@
 					]
 				)
 			]
-				where x_offset = me.x+4
-				where y_offset = me.y-2
+				where x_offset = heart_icon_margin + generic_padding_value
+				where y_offset = -2
 			 
 				where display_length = if(max_hp > 0, lib.math.ceil( hitpoint_bar_length * hitpoint_fraction ), 0)
 				where hitpoint_fraction = (currently_displayed_hitpoint_amount / max_hp)
@@ -199,8 +213,8 @@
 			properties: {
 				_length: { type: "int", default: 10 },
 				set_draw_params: "def(int new_x, int new_y, int new_length) -> commands [
-										set(x, new_x),
-										set(y, new_y),
+										set(relative_x, new_x),
+										set(relative_y, new_y),
 										set(_length, new_length)
 									]"
 						
@@ -233,6 +247,18 @@
 				no_remove_alpha_borders: true,
 			},
 		},
+		
+		
+		{
+			id: "angry_heart_icon",
+
+			animation: {
+				id:	'normal',
+				image: 'gui/hud.png',
+				rect: [101,47,126,72], 
+				no_remove_alpha_borders: true,
+			},
+		},	
 	],
 
 
