Further cleanup to the boss_progress_display component; removing the widget components inside it, and fixing a rounding error on the center bar's length.

--- a/data/objects/gui-components/hud-components/boss_progress_display.cfg
+++ b/data/objects/gui-components/hud-components/boss_progress_display.cfg
@@ -12,67 +12,7 @@
 	properties: {
 		bar_tween_speed: 16.0, //Decimal. Larger numbers = slower bar adjustment.
 	
-		heart_icon: {
-			type: "widget", 
-			init: "widget(me, {
-				type: 'image',
-				visible: false,
-				x: 20,
-				y: -56,
-				image: 'gui/hud.png',
-				area: [101,47,126,72], //xyxy
-			})",
-		},
-		
-		health_bar_background: {
-			type: "bar_widget", 
-			init: "bar_widget <- widget(me, {
-				type: 'bar',
-				visible: false,
-				segment_length: level.camera_position[2]/2-90,
-				left_cap_length: 8,
-				right_cap_length: 8,
-				x: 90,
-				y: -44,
-				bar: {
-					image: 'gui/progress-bar-well-center.png',
-					area: [0,0,1,11], //xywh
-				},
-				left_cap: {
-					image: 'gui/progress-bar-well-endcaps.png',
-					area: [0,0,8,11],
-				},
-				right_cap: {
-					image: 'gui/progress-bar-well-endcaps.png',
-					area: [8,16,8,11],
-				},
-			})",
-		},
-		
-		health_bar: {
-			type: "bar_widget", 
-			init: "bar_widget <- widget(me, {
-				type: 'bar',
-				visible: false,
-				segment_length: 1,
-				left_cap_length: 8,
-				right_cap_length: 8,
-				x: 90,
-				y: -44+4,
-				bar: {
-					image: 'gui/progress-bar-center.png',
-					area: [0,0,1,7], //xywh
-				},
-				left_cap: {
-					image: 'gui/progress-bar-endcaps.png',
-					area: [0,0,8,7],
-				},
-				right_cap: {
-					image: 'gui/progress-bar-endcaps.png',
-					area: [0,8,8,7],
-				},
-			})",
-		},
+
 		
 		last_displayed_value: { type: "decimal", default: 0.0 },
 		recent_max_hitpoints: { type: "int", default: 0 },
@@ -165,7 +105,6 @@
 	},
 	
 	on_create: "[
-		//set_widgets(heart_icon, health_bar_background, health_bar),
 		constructor,
 	]",
 	
@@ -177,12 +116,6 @@
 				// cache the hitpoints, because if the boss dies, we can no longer directly access it.
 			if(direct_boss_max_hp > 0, set(recent_max_hitpoints, max(recent_max_hitpoints, direct_boss_max_hp))),
 		
-/* 			map([widget]<-widgets.children, set(value.visible, bool(display_value))),
- 			if(display_value, 
- 				set(health_bar.segment_length, display_length),
-				[set(recent_max_hitpoints, 0), set(boss_list,[])]
-			),
-*/
 			if(display_value, 
 				draw_bar,
 				[set(recent_max_hitpoints, 0), set(boss_list,[])]
@@ -190,7 +123,7 @@
 
 		]
 	] 
-		where display_length = if(max_hp > 0, round(health_bar_background.segment_length*display_value/1.0/max_hp), 0)
+		where display_length = if(max_hp > 0, round(1*display_value/1.0/max_hp), 0)
 		where display_value = if(abs(step) < 0.01, hp, last_displayed_value+step)
 		where step = (hp - last_displayed_value) / bar_tween_speed
 		where hp = fold([int]<-map(_bosses, value.hitpoints), a+b)
@@ -220,7 +153,7 @@
 						
 
 			},
-			on_process: "set(draw_area, [0.0, 0.0, _length/2.0, img_h/2.0])",
+			on_process: "set(draw_area, [0.0, 0.0, lib.math.ceil(_length/2.0), img_h/2.0])",
 		
 			animation: {
 				id:	'normal',
