Simplifying and extracting the values in several where clauses and we try to figure out why the bar is hiding itself.

--- a/data/objects/gui-components/hud-components/boss_progress_display.cfg
+++ b/data/objects/gui-components/hud-components/boss_progress_display.cfg
@@ -10,12 +10,6 @@
 	no_compile_image: "gui/progress-bar-center.png,gui/progress-bar-well-center.png",
 
 	properties: {
-		bar_tween_speed: 16.0, //Decimal. Larger numbers = slower bar adjustment.
-	
-
-		
-		last_displayed_value: { type: "decimal", default: 0.0 },
-		recent_max_hitpoints: { type: "int", default: 0 },
 		
 		reset: "def() -> commands [
 			//set((object<-level.gui[0].vars).bosses, []),                //Clear any saved bosses from the level. When the checkpoint is activated, it doesn't muck around with any of the level variables.
@@ -67,7 +61,7 @@
 		heart_icon_margin: "int :: angry_heart_icon.img_w + generic_padding_value",
 		hitpoint_bar_length: "int :: level.camera_position[2] - heart_icon_margin - (generic_padding_value * 3)",
 
-		draw_bar: "[
+		draw_bar: "
 			[
 				set(mana_bar_left.relative_x, x_offset),
 				set(mana_bar_left.relative_y, y_offset),
@@ -92,16 +86,37 @@
 				where x_offset = heart_icon_margin + generic_padding_value
 				where y_offset = -2
 			 
-				where display_length = if(max_hp > 0, lib.math.ceil( hitpoint_bar_length * hitpoint_fraction ), 0)
-				where hitpoint_fraction = (currently_displayed_hitpoint_amount / max_hp)
-				where currently_displayed_hitpoint_amount = if(abs(step) < 0.01, hp, last_displayed_value+step)
-				where step = (hp - last_displayed_value) / bar_tween_speed
-				where hp = fold([int]<-map(_bosses, value.hitpoints), a+b)
-		]
-			where max_hp = recent_max_hitpoints
-			where direct_boss_max_hp = fold([int]<-map(_bosses, value.max_hitpoints), a+b)
-			where _bosses = me.boss_list
+				where display_length = if(recent_max_hitpoints > 0, lib.math.ceil( hitpoint_bar_length * hitpoint_fraction ), 0)
+				where hitpoint_fraction = (currently_displayed_value / recent_max_hitpoints)
 		",
+
+
+#-------------------------- direct values --------------------------#
+		
+		/*
+			'direct' in the sense that half the time, we're doing a cached or time-delayed value.  This isn't that - this is reading the values directly from the "source of truth".
+		*/
+		direct_boss_max_hp: "fold([int]<-map(me.boss_list, value.max_hitpoints), a+b)",
+		direct_boss_hp: "fold([int]<-map(me.boss_list, value.hitpoints), a+b)",
+
+
+
+#-------------------------- tweening/display values --------------------------#
+		bar_tween_speed: { type: "decimal", default: 16.0 }, //Larger numbers = slower bar adjustment.
+		
+		last_displayed_value: { type: "decimal", default: 0.0 },
+		recent_max_hitpoints: { type: "int", default: 0 },
+
+
+		adjustment_this_frame: "decimal :: (direct_boss_hp - last_displayed_value) / bar_tween_speed",
+		
+		currently_displayed_value: "if(abs(adjustment_this_frame) < 0.01,
+			direct_boss_hp,
+			last_displayed_value + adjustment_this_frame
+		)",
+		
+		
+		
 	},
 	
 	on_create: "[
@@ -110,27 +125,21 @@
 	
 	on_player_death: "reset_boss_list",
 	
-	on_process: "[[
+	on_process: "[
 		[
-			set(last_displayed_value, display_value),
+			set(last_displayed_value, currently_displayed_value),
 				// cache the hitpoints, because if the boss dies, we can no longer directly access it.
 			if(direct_boss_max_hp > 0, set(recent_max_hitpoints, max(recent_max_hitpoints, direct_boss_max_hp))),
 		
-			if(display_value, 
+			if(currently_displayed_value, 
 				draw_bar,
 				[set(recent_max_hitpoints, 0), set(boss_list,[])]
 			),
 
 		]
 	] 
-		where display_length = if(max_hp > 0, round(1*display_value/1.0/max_hp), 0)
-		where display_value = if(abs(step) < 0.01, hp, last_displayed_value+step)
-		where step = (hp - last_displayed_value) / bar_tween_speed
-		where hp = fold([int]<-map(_bosses, value.hitpoints), a+b)
-	] where max_hp = recent_max_hitpoints
-	  where direct_boss_max_hp = fold([int]<-map(_bosses, value.max_hitpoints), a+b)
-	  where _bosses = me.boss_list
-	  ",
+		where display_length = if(recent_max_hitpoints > 0, round(1* currently_displayed_value /1.0/recent_max_hitpoints), 0)
+	",
 
 
 	object_type: [{
