Isolated the weird integer-division case that was causing the hp bar to read as zero instead of a fraction.

--- a/data/objects/gui-components/hud-components/boss_progress_display.cfg
+++ b/data/objects/gui-components/hud-components/boss_progress_display.cfg
@@ -74,22 +74,24 @@
 						add_object(mana_bar_center),
 						add_object(mana_bar_left),
 						add_object(mana_bar_right),
+						add_object(angry_heart_icon),
 						mana_bar_center.set_draw_params( x_offset + mana_bar_left.img_w, y_offset, display_length)
 					],
-					[
-						remove_object(mana_bar_center),
-						remove_object(mana_bar_left),
-						remove_object(mana_bar_right),
-					]
+					hide_bar
 				)
 			]
 				where x_offset = heart_icon_margin + generic_padding_value
 				where y_offset = -2
 			 
 				where display_length = if(recent_max_hitpoints > 0, lib.math.ceil( hitpoint_bar_length * hitpoint_fraction ), 0)
-				where hitpoint_fraction = (currently_displayed_value / recent_max_hitpoints)
 		",
 
+		hide_bar: "[
+			remove_object(mana_bar_center),
+			remove_object(mana_bar_left),
+			remove_object(mana_bar_right),
+			remove_object(angry_heart_icon),
+		]",
 
 #-------------------------- direct values --------------------------#
 		
@@ -105,18 +107,19 @@
 		bar_tween_speed: { type: "decimal", default: 16.0 }, //Larger numbers = slower bar adjustment.
 		
 		last_displayed_value: { type: "decimal", default: 0.0 },
-		recent_max_hitpoints: { type: "int", default: 0 },
+		recent_max_hitpoints: { type: "decimal", default: 0.0 },
 
 
 		adjustment_this_frame: "decimal :: (direct_boss_hp - last_displayed_value) / bar_tween_speed",
 		
-		currently_displayed_value: "if(abs(adjustment_this_frame) < 0.01,
+		currently_displayed_value: "decimal :: if(abs(adjustment_this_frame) < 0.01,
 			direct_boss_hp,
 			last_displayed_value + adjustment_this_frame
 		)",
 		
+		hitpoint_fraction: "decimal :: if(recent_max_hitpoints > 0, decimal(currently_displayed_value) / recent_max_hitpoints, 0.0)",
 		
-		
+		display_length: "int :: lib.math.ceil( hitpoint_bar_length * hitpoint_fraction )",
 	},
 	
 	on_create: "[
@@ -133,12 +136,15 @@
 		
 			if(currently_displayed_value, 
 				draw_bar,
-				[set(recent_max_hitpoints, 0), set(boss_list,[])]
+				[
+					set(recent_max_hitpoints, 0),
+					set(boss_list,[]),
+					hide_bar,
+				]
 			),
 
 		]
-	] 
-		where display_length = if(recent_max_hitpoints > 0, round(1* currently_displayed_value /1.0/recent_max_hitpoints), 0)
+	]
 	",
 
 
