Touched up the boss hp bar to a mostly-final state.

--- a/data/objects/gui-components/hud-components/boss_progress_display.cfg
+++ b/data/objects/gui-components/hud-components/boss_progress_display.cfg
@@ -3,7 +3,7 @@
 	id: "boss_progress_display",
 	is_strict: true,
 	use_absolute_screen_coordinates: true,
-	hidden_in_game: false,
+	hidden_in_game: true,
 	serializable: false,
 	
 	zorder: "@include data/zorder.cfg:in_front_of_everything",
@@ -30,18 +30,32 @@
 
 
 
-		mana_bar_center: {
+		hp_bar_center: {
 			type: "obj boss_progress_display.bar_center",
 			init: "object('boss_progress_display.bar_center', mid_x, mid_y, {parent: me})",
 		},
-		mana_bar_left: {
+		hp_bar_left: {
 			type: "obj boss_progress_display.left_cap",
 			init: "object('boss_progress_display.left_cap', mid_x, mid_y, {parent: me})",
 		},
-		mana_bar_right: {
+		hp_bar_right: {
 			type: "obj boss_progress_display.right_cap",
 			init: "object('boss_progress_display.right_cap', mid_x, mid_y, {parent: me})",
 		},
+
+		well_center: {
+			type: "obj boss_progress_display.well_center",
+			init: "object('boss_progress_display.well_center', mid_x, mid_y, {parent: me})",
+		},
+		well_left: {
+			type: "obj boss_progress_display.well_left_cap",
+			init: "object('boss_progress_display.well_left_cap', mid_x, mid_y, {parent: me})",
+		},
+		well_right: {
+			type: "obj boss_progress_display.well_right_cap",
+			init: "object('boss_progress_display.well_right_cap', mid_x, mid_y, {parent: me})",
+		},
+		
 		angry_heart_icon: {
 			type: "obj boss_progress_display.angry_heart_icon",
 			init: "object('boss_progress_display.angry_heart_icon', mid_x, mid_y, {parent: me})",
@@ -49,47 +63,74 @@
 
 
 		constructor: "[
-			add_object(mana_bar_center),
-			add_object(mana_bar_left),
-			add_object(mana_bar_right),
-			add_object(angry_heart_icon),
+			show_bar,
 			
 			set(angry_heart_icon.relative_x, generic_padding_value + angry_heart_icon.img_w/2),
 		]",
 		
 		generic_padding_value: "int :: 16", //used on both sides of the screen, and between the icon and the bar.
 		heart_icon_margin: "int :: angry_heart_icon.img_w + generic_padding_value",
-		hitpoint_bar_length: "int :: level.camera_position[2] - heart_icon_margin - (generic_padding_value * 3)",
+		hitpoint_well_length: "int :: level.camera_position[2] - heart_icon_margin - (generic_padding_value * 3)",
 
 		draw_bar: "
 			[
-				set(mana_bar_left.relative_x, x_offset),
-				set(mana_bar_left.relative_y, y_offset),
+				set(hp_bar_left.relative_x, x_offset + bar_inset.x),
+				set(hp_bar_left.relative_y, y_offset + bar_inset.y),
 				
-				set(mana_bar_right.relative_x, x_offset + display_length + mana_bar_left.img_w ),
-				set(mana_bar_right.relative_y, y_offset),
+				set(hp_bar_right.relative_x, x_offset + display_length - bar_inset.x ),  
+				set(hp_bar_right.relative_y, y_offset + bar_inset.y),
+
+
+				set(well_left.relative_x, x_offset),
+				set(well_left.relative_y, y_offset),
 				
+				set(well_right.relative_x, x_offset + well_left.img_w + hitpoint_well_length - well_right.img_w),
+				set(well_right.relative_y, y_offset),
+				
+								
 				if(display_length > 8, 
 					[
-						add_object(mana_bar_center),
-						add_object(mana_bar_left),
-						add_object(mana_bar_right),
-						add_object(angry_heart_icon),
-						mana_bar_center.set_draw_params( x_offset + mana_bar_left.img_w, y_offset, display_length)
+						show_bar,
+						hp_bar_center.set_draw_params(
+							x_offset + bar_inset.x + hp_bar_left.img_w,
+							y_offset + bar_inset.y,
+							display_length - 2 * bar_inset.x - hp_bar_right.img_w
+						),
+						
+						well_center.set_draw_params(
+							x_offset + well_left.img_w,
+							y_offset,
+							hitpoint_well_length - well_right.img_w
+						),
 					],
 					hide_bar
 				)
 			]
 				where x_offset = heart_icon_margin + generic_padding_value
-				where y_offset = -2
+				where y_offset = 3
+				
+				where bar_inset = {x: -4, y: -4} //the bar sits a few pixels inside the well.
 			 
-				where display_length = if(recent_max_hitpoints > 0, lib.math.ceil( hitpoint_bar_length * hitpoint_fraction ), 0)
+				where display_length = if(recent_max_hitpoints > 0, lib.math.ceil( hitpoint_well_length * hitpoint_fraction ), 0)
 		",
 
+		show_bar: "[
+			add_object(hp_bar_center),
+			add_object(hp_bar_left),
+			add_object(hp_bar_right),
+			add_object(well_center),
+			add_object(well_left),
+			add_object(well_right),
+			add_object(angry_heart_icon),
+		]",
+
 		hide_bar: "[
-			remove_object(mana_bar_center),
-			remove_object(mana_bar_left),
-			remove_object(mana_bar_right),
+			remove_object(hp_bar_center),
+			remove_object(hp_bar_left),
+			remove_object(hp_bar_right),
+			remove_object(well_center),
+			remove_object(well_left),
+			remove_object(well_right),
 			remove_object(angry_heart_icon),
 		]",
 
@@ -119,12 +160,14 @@
 		
 		hitpoint_fraction: "decimal :: if(recent_max_hitpoints > 0, decimal(currently_displayed_value) / recent_max_hitpoints, 0.0)",
 		
-		display_length: "int :: lib.math.ceil( hitpoint_bar_length * hitpoint_fraction )",
+		display_length: "int :: lib.math.ceil( hitpoint_well_length * hitpoint_fraction )",
 	},
 	
 	on_create: "[
 		constructor,
 	]",
+	
+	on_being_removed: "hide_bar",
 	
 	on_player_death: "reset_boss_list",
 	
@@ -195,6 +238,53 @@
 				no_remove_alpha_borders: true,
 			},
 		},
+		
+		
+		
+
+		{
+			id: "well_center",
+			zsub_order: 1,
+			properties: {
+				_length: { type: "int", default: 10 },
+				set_draw_params: "def(int new_x, int new_y, int new_length) -> commands [
+										set(relative_x, new_x),
+										set(relative_y, new_y),
+										set(_length, new_length)
+									]"
+						
+
+			},
+			on_process: "set(draw_area, [0.0, 0.0, lib.math.ceil(_length/2.0), img_h/2.0])",
+		
+			animation: {
+				id:	'normal',
+				image: 'gui/progress-bar-well-center.png',
+				rect: [0,0,15,15], 
+				no_remove_alpha_borders: true,
+			},
+		},{
+			id: "well_left_cap",
+			zsub_order: 1,
+
+			animation: {
+				id:	'normal',
+				image: 'gui/progress-bar-well-endcaps.png',
+				rect: [0,0,15,15],
+				no_remove_alpha_borders: true,
+			},
+		},{
+			id: "well_right_cap",
+			zsub_order: 1,
+
+			animation: {
+				id:	'normal',
+				image: 'gui/progress-bar-well-endcaps.png',
+				rect: [0,16,15,31], 
+				no_remove_alpha_borders: true,
+			},
+		},
+		
 		
 		
 		{
