--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -1233,10 +1233,12 @@ properties: {
 												where start = swim_rotation_cosmetic",
 	
 #-------------------------- gui / hud --------------------------#
-	
+	/*
+		27 is often seen as a 'magic number' in these calcs.  It's half the height/width of the 'gear icon', which is the default icon for an object without an assigned image.
+	*/
 	gui_heart_display: {
 		type: "obj heart_display", 
-		init: "object('heart_display', {mid_x: 18 + 108, mid_y: 24})", //27 is offset for some sort of interaction with the default animation, object positioning, etc.
+		init: "object('heart_display', {mid_x: 18 + 108, mid_y: 24})",
 		persistent: false,
 	},
 	gui_ability_display: {
@@ -1261,7 +1263,7 @@ properties: {
 	},
 	gui_boss_progress_display: {
 		type: "obj boss_progress_display", 
-		init: "object('boss_progress_display', 0, level.camera_position[3] - 27 /*gear icon center*/ - 16 /*margin*/, {})",
+		init: "object('boss_progress_display', 0, level.camera_position[3] - 27 /*gear icon center*/ - 10 /*margin*/, {})",
 		persistent: false,
 	},
 	gui_gold_display: {
