Did some scary list-slicing to give us an ability-toggler that adapts to the size of the current ability list.

--- a/data/objects/gui-components/hud-components/ability_display.cfg
+++ b/data/objects/gui-components/hud-components/ability_display.cfg
@@ -51,8 +51,22 @@
 
 
 #-------------------------- core behavior --------------------------#
-		graphic_cells: "[custom_obj] ::
+		max_graphic_cells: "[custom_obj] ::
 							[graphic_pre2, graphic_pre1, graphic, graphic_post1, graphic_post2]",
+
+		
+		graphic_cells: "[custom_obj] :: max_graphic_cells[
+			/*
+				A little bit of black magic here, to start us deeper into the list so we get i.e. [graphic_pre1, graphic, graphic_post1] rather than [graphic_pre2, graphic_pre1, graphic].  Essentially we need it centered so that 'graphic' is guaranteed to be in the set, somewhere.
+			*/
+			start_val
+			:
+			start_val + min( size(player.ability_list), 5 )
+		] where start_val = max(0,
+				lib.math.floor( (5 - size(player.ability_list)) / 2.0 )
+			)
+		
+		",
 
 		set_to_animation: "def( custom_obj target, [int,int,int,int] rect) -> commands
 			set(target.animation, {
@@ -81,7 +95,7 @@
 							replace_existing: true,
 							on_complete: anim2
 					}) where anim2 = animate(value, {
-							alpha: if(index = 2, 255, 0),
+							alpha: if(index = index(graphic_cells, graphic), 255, 0),
 							mid_x: mid_x ,
 							mid_y: mid_y ,
 						},{
@@ -112,13 +126,23 @@
 			set(overlay.relative_x, 0),
 			set(overlay.relative_y, 0),
 			set(me.alpha, 0),
-		]"
+		]",
 
+
+		destructor: "[
+			map(max_graphic_cells, remove_object(value)),
+			remove_object(overlay),
+			remove_object(super_indicator),
+		]"
+		
 	},
 	
 	on_start_level: "constructor", //When we enter a new level, the frogatto object retains the reference to ability_display object. Frogatto takes care of adding this object to the level. However, this object must add any objects it added previously. Since the object is only created once, on_create only ever fires once. Since the first level is not entered when this object is around, on_start_level only fires every time after the first level we enter.
 
 	on_create: "constructor",
+	on_being_added: "constructor",
+	on_being_removed: "destructor",
+	
 	
 	//Sync UI state with Frogatto.
 	on_process: "
@@ -155,7 +179,14 @@
 							player.item_info(player.current_super_ability),
 							player.item_info( player.nth_item_away_from_current_item_of_category(normalized_index, enum super_ability) )
 						)) 						
-					) where normalized_index = offset - 2)
+					) where normalized_index =  offset - index(graphic_cells, graphic)
+						/* we're basically hand-coding indices for especially short lists.  'Normally', we top out at a list of 5, with the active ability smack-dab in the middle.  But for lesser lists we pick the midpoint and round down. */
+//						switch(true,
+//							size( player.ability_list ) = 1,	offset,
+//							size( player.ability_list ) > 1 and size( player.ability_list ) < 5, offset - (lib.math.floor( size(player.ability_list) / 2.0 ) + 1),
+//							offset - 2
+//						)
+				)
 
 				
 		) where si_uniforms = super_indicator.shader.uniform_commands asserting super_indicator.shader
