--- a/data/objects/gui-components/hud-components/ability_display.cfg
+++ b/data/objects/gui-components/hud-components/ability_display.cfg
@@ -57,16 +57,14 @@
 		
 		graphic_cells: "[custom_obj] :: max_graphic_cells[
 			/*
-				A little bit of black magic here, to start us deeper into the list so we get i.e. [graphic_pre1, graphic, graphic_post1] rather than [graphic_pre2, graphic_pre1, graphic].  Essentially we need it centered so that 'graphic' is guaranteed to be in the set, somewhere.
+				A little bit of black magic here, to start us deeper into the list so we get i.e. [graphic_pre1, graphic, graphic_post1] rather than [graphic_pre2, graphic_pre1, graphic].  Essentially we need it centered so that `graphic` is guaranteed to be in the set, somewhere.  The object represented by `graphic` specifically represents the current ability/powerup.
 			*/
 			start_val
 			:
 			start_val + min( size(player.ability_list), 5 )
 		] where start_val = max(0,
-				lib.math.floor( (5 - size(player.ability_list)) / 2.0 )
-			)
-		
-		",
+			lib.math.floor( (5 - size(player.ability_list)) / 2.0 )
+		)",
 
 		set_to_animation: "def( custom_obj target, [int,int,int,int] rect) -> commands
 			set(target.animation, {
@@ -179,13 +177,10 @@
 							player.item_info(player.current_super_ability),
 							player.item_info( player.nth_item_away_from_current_item_of_category(normalized_index, enum super_ability) )
 						)) 						
+						/*
+							There's a little bit of 'special logic' here in the where clause - this is intended to take our offset (i.e. which of the 5 graphical cells we could be looking at), and change the values from `[0, 1, 2, 3, 4]`, to being `[-2, -1, 0, 1, 2]`.  0 is meant to specially represent the -current- ability the player has selected.
+						*/
 					) where normalized_index =  offset - index(graphic_cells, graphic)
-						/* we're basically hand-coding indices for especially short lists.  'Normally', we top out at a list of 5, with the active ability smack-dab in the middle.  But for lesser lists we pick the midpoint and round down. */
-//						switch(true,
-//							size( player.ability_list ) = 1,	offset,
-//							size( player.ability_list ) > 1 and size( player.ability_list ) < 5, offset - (lib.math.floor( size(player.ability_list) / 2.0 ) + 1),
-//							offset - 2
-//						)
 				)
 
 				
@@ -220,6 +215,7 @@
 			},
 			
 			on_create: "add_object(frame)",
+			on_being_added: "add_object(frame)",
 			on_being_removed: "remove_object(frame)",
 		},
 
