Some quick and dirty drafts of other hax functions.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -321,6 +321,21 @@ properties: {
 		;set_item_amount(enum item_heart_container, 3),
 		;add_item(enum item_fire_breath_talisman, 1),
 	]",
+	hax_gazer: "[ /* progression similar to having beaten the gazer boss. */
+		;set_item_amount(enum item_magic_map, 1),
+		;set_item_amount(enum item_heart_container, 4),
+		;add_item(enum item_fire_breath_talisman, 1),
+		;add_item(enum item_energy_shot_talisman, 1),
+	]",
+	hax_moth: "[ /* progression similar to having beaten the moth boss. */
+		;set_item_amount(enum item_magic_map, 1),
+		;set_item_amount(enum item_heart_container, 4),
+		;add_item(enum item_fire_breath_talisman, 1),
+		;add_item(enum item_energy_shot_talisman, 1),
+		;add_item(enum item_homing_shot_talisman, 1),
+	]",
+
+	
 	choppa: "set(_jump_cheat,true)",
 	smite: "map(filter(level.chars, value is obj hittable), if(value.team = 'evil', value.force_death()))",
 	supes: "[hax,choppa,set(invincible,-1)]",
